--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f026f2a
+	base = 327b27f
 	trimbase = 
 	parent = release/dashing/urdfdom_py
-	previous = 
+	previous = f026f2a
