--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 25491e0
+	base = d46230d
 	trimbase = 
 	parent = debian/dashing/urdfdom_py
-	previous = 
+	previous = 25491e0
