--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2af1978
+	base = e7007c3
 	trimbase = 
 	parent = release/eloquent/urdfdom_py
-	previous = 
+	previous = 2af1978
