--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5240b22
+	base = a53c599
 	trimbase = 
 	parent = debian/eloquent/urdfdom_py
-	previous = 
+	previous = 5240b22
