--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/foxy/urdfdom_py
-	previous = 
-	base = 12090ff
+	previous = 12090ff
+	base = 85c80fa
 	trim = 
 	trimbase = 
