--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/urdfdom_py
-	previous = 
-	base = 14c19ed
+	previous = 14c19ed
+	base = 890c936
 	trim = 
 	trimbase = 
