--- a/tracks.yaml
+++ b/tracks.yaml
@@ -94,4 +94,5 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/ros/urdf_parser_py.git
-    version: :{auto}
+    version: 1.0.0
+    version_saved: :{auto}
