--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/urdfdom_py
-	previous = 
-	base = 545c4af
+	previous = 545c4af
+	base = 472da94
 	trim = 
 	trimbase = 
