--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/urdfdom_py
-	previous = 
-	base = 99d848d
+	previous = 99d848d
+	base = d174587
 	trim = 
 	trimbase = 
