--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/urdfdom_py
-	previous = 
-	base = ec4e351
+	previous = ec4e351
+	base = 96afbaf
 	trim = 
 	trimbase = 
