--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.0-2": ["Mon Mar 08 2021", "Chris Lalancette", "clalancette@osrfoundation.org"]}
+{"1.1.0-1": ["Mon Mar 15 2021", "Chris Lalancette", "clalancette@osrfoundation.org"], "1.0.0-2": ["Mon Mar 08 2021", "Chris Lalancette", "clalancette@osrfoundation.org"]}
