--- a/tracks.yaml
+++ b/tracks.yaml
@@ -122,4 +122,5 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/ros/urdf_parser_py.git
-    version: :{auto}
+    version: 1.1.0
+    version_saved: :{auto}
