--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/urdfdom_py
-	previous = 
-	base = 561d920
+	previous = 561d920
+	base = 69c57ee
 	trim = 
 	trimbase = 
