--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/urdfdom_py
-	previous = 
-	base = 5142e9b
+	previous = 5142e9b
+	base = f09884f
 	trim = 
 	trimbase = 
