--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/urdfdom_py
-	previous = 
-	base = b6709d9
+	previous = b6709d9
+	base = 05c7b72
 	trim = 
 	trimbase = 
