--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/urdfdom_py
-	previous = 
-	base = 06e3437
+	previous = 06e3437
+	base = de1a6b8
 	trim = 
 	trimbase = 
