--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/share/urdfdom_py/scripts
+script_dir=$base/lib/urdfdom_py
 [install]
-install-scripts=$base/share/urdfdom_py/scripts
+install_scripts=$base/lib/urdfdom_py
