--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.1.0-2": ["Tue Feb 08 2022", "Chris Lalancette", "clalancette@osrfoundation.org"]}
+{"1.2.0-1": ["Wed Mar 30 2022", "Chris Lalancette", "clalancette@osrfoundation.org"], "1.1.0-2": ["Tue Feb 08 2022", "Chris Lalancette", "clalancette@osrfoundation.org"]}
