--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/urdfdom_py
-	previous = 
-	base = 39599dc
+	previous = 39599dc
+	base = 1dad721
 	trim = 
 	trimbase = 
