--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/urdfdom_py
-	previous = 
-	base = f6ff646
+	previous = f6ff646
+	base = ee989f6
 	trim = 
 	trimbase = 
