--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/urdfdom_py
-	previous = 
-	base = 38c3d3e
+	previous = 38c3d3e
+	base = b16d6e3
 	trim = 
 	trimbase = 
