--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/urdfdom_py
-	previous = 
-	base = 5028891
+	previous = 5028891
+	base = ae1faae
 	trim = 
 	trimbase = 
