--- a/tracks.yaml
+++ b/tracks.yaml
@@ -148,5 +148,4 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/ros/urdf_parser_py.git
-    version: 1.2.0
-    version_saved: :{auto}
+    version: :{auto}
