--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.2.0-3": ["Thu Apr 20 2023", "Chris Lalancette", "clalancette@osrfoundation.org"], "1.2.0-2": ["Wed Mar 22 2023", "Chris Lalancette", "clalancette@osrfoundation.org"]}
+{"1.2.1-1": ["Mon May 01 2023", "Chris Lalancette", "clalancette@openrobotics.org"], "1.2.0-3": ["Thu Apr 20 2023", "Chris Lalancette", "clalancette@osrfoundation.org"], "1.2.0-2": ["Wed Mar 22 2023", "Chris Lalancette", "clalancette@osrfoundation.org"]}
