--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/urdfdom_py
-	previous = 
-	base = 63259c8
+	previous = 63259c8
+	base = cdd4851
 	trim = 
 	trimbase = 
