--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/urdfdom_py
-	previous = 
-	base = 7606a45
+	previous = 7606a45
+	base = 5ba6651
 	trim = 
 	trimbase = 
