--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/urdfdom_py
-	previous = 
-	base = 5d97286
+	previous = 5d97286
+	base = f940a12
 	trim = 
 	trimbase = 
