--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/urdfdom_py
-	previous = 
-	base = fd8697f
+	previous = fd8697f
+	base = 5d3c2ab
 	trim = 
 	trimbase = 
