--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.2.1-2": ["Wed Mar 06 2024", "Chris Lalancette", "clalancette@openrobotics.org"]}
+{"1.2.1-3": ["Fri Apr 19 2024", "Chris Lalancette", "clalancette@openrobotics.org"], "1.2.1-2": ["Wed Mar 06 2024", "Chris Lalancette", "clalancette@openrobotics.org"]}
